Establish new branch for working on the reference implementation spec.
 On branch impl/uarch-spec
 Changes to be committed:
	modified:   docs/Makefile
	modified:   docs/crypto-ise.tex
	new file:   docs/ise-implementation.tex

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,4 @@
-SOURCES = crypto-ise.tex
+SOURCES = crypto-ise.tex ise-implementation.tex
 TARGETS = $(patsubst %.tex, %.pdf, ${SOURCES})
 
 ${TARGETS} : %.pdf : %.tex
@@ -9,6 +9,9 @@ ${TARGETS} : %.pdf : %.tex
 	@pdflatex ${*}.tex
 
 all      : ${TARGETS}
+
+ise-spec : crypto-ise.pdf
+impl-spec: ise-implementation.pdf
 
 clean    :
 	@rm -f *.aux *.bbl *.bcf *.blg *.log *.out *.pdf *.version *.xml *.toc \
