Scrapped old examples to start work on new ones.
 On branch dev/examples
 Changes to be committed:
	modified:   Makefile
	modified:   aes-accelerated.S
	modified:   cop-instructions.S

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@ CC      = $(RISCV)/bin/riscv64-unknown-elf-gcc
 AS      = $(RISCV)/bin/riscv64-unknown-elf-as
 OBJDUMP = $(RISCV)/bin/riscv64-unknown-elf-objdump
 
-CCFLAGS +=-Os -O2 -march=rv32im -mabi=ilp32 -nostartfiles -nostdlib -fpie
+CCFLAGS += -E -Os -O2 -march=rv32im -mabi=ilp32 -nostartfiles -nostdlib -fpie
 
 SRC     ?= aes-accelerated.S
 
