--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,8 @@
+ETABLE  = $(COP_WORK)/crypto-ise.encodings.tex
 SOURCES = crypto-ise.tex
 TARGETS = $(patsubst %.tex, %.pdf, ${SOURCES})
 
+${TARGETS} : $(ETABLE)
 ${TARGETS} : %.pdf : %.tex
 	@pdflatex ${*}.tex
 	@biber    ${*}
@@ -8,7 +10,10 @@ ${TARGETS} : %.pdf : %.tex
 	@biber    ${*}
 	@pdflatex ${*}.tex
 
-all      : ${TARGETS}
+all      : ${TARGETS} $(ETABLE)
+
+$(ETABLE): ise-opcodes.txt
+	cat $< | $(COP_HOME)/bin/ise-parse-opcodes.py -tex > $@
 
 clean    :
 	@rm -f *.aux *.bbl *.bcf *.blg *.log *.out *.pdf *.version *.xml *.toc \
