Working assembly for all opcodes.
- All instructions now assemble, though no exhaustive testing yet.
- Make it easier to identify parts of binutils relating to ISE
  generated code.
- Add binutils 2.30 patch to repository under external/

 On branch dev/examples
 Changes to be committed:
	modified:   Makefile
	modified:   bin/ise-parse-opcodes.py
	modified:   examples/Makefile
	modified:   examples/cop-instructions.S
	new file:   external/riscv-binutils-gdb-2.30.patch

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -15,7 +15,7 @@ ${COP_WORK}/%.o : %.S
 	$(AS) $(ASFLAGS) $(INC_DIRS) -c -o $@ $^
 
 ${COP_WORK}/%.dis : $(COP_WORK)/%.o
-	$(OBJDUMP) -Dt $< > $@
+	$(OBJDUMP) -j.text -dt $< > $@
 
 .PHONY: clean
 clean:
