Add instructions for fetching and building modified binutils.
- Instructions in README
- Applies patch from `external/`
- Clones riscv-binutils-gdb into `work/`

 On branch dev/examples
 Changes to be committed:
	modified:   README.md
	new file:   bin/setup-binutils.sh
	modified:   examples/Makefile

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 
 
-AS      = ~/riscv/riscv-binutils-gdb/build/gas/as-new
-OBJDUMP = ~/riscv/riscv-binutils-gdb/build/binutils/objdump
+AS      = $(COP_HOME)/work/riscv-binutils-gdb/build/gas/as-new
+OBJDUMP = $(COP_HOME)/work/riscv-binutils-gdb/build/binutils/objdump
 
 ASFLAGS += -march=rv32imx -mabi=ilp32 -fpic
 
