Got first simulation running.
- Sim does nothing for lack of RTL implementation.
- Clock / reset work.

 On branch dev/implementation
 Changes to be committed:
	modified:   Makefile
	modified:   flow/icarus/Makefile
	new file:   flow/icarus/waves-view.gtkw
	modified:   rtl/scarv_cop_top.v
	modified:   verif/tb/tb_scarv_cop_top.v

--- a/flow/icarus/Makefile
+++ b/flow/icarus/Makefile
@@ -1,6 +1,6 @@
 
 RTL_TIMEOUT=1000
-RTL_WAVES  = $(COP_HOME)/work/waves.vcd
+RTL_WAVES  = $(COP_HOME)/work/icarus/waves.vcd
 RTL_VECTOR = 
 RTL_TRACE  =
 
