Implement Packed arithmetic instruction models.
- All packed arithmetic instructions added with unit tests.
- Closes #4
- Lengthened default simulation time
- Sim time controllable from top-level make file.

 On branch dev/implementation
 Changes to be committed:
	modified:   Makefile
	modified:   flow/icarus/Makefile
	modified:   verif/model/model_ise.v
	new file:   verif/unit/05-packed-arith.S
	new file:   verif/unit/06-packed-shift.S
	new file:   verif/unit/07-packed-shifti.S

--- a/flow/icarus/Makefile
+++ b/flow/icarus/Makefile
@@ -1,7 +1,7 @@
 
-RTL_TIMEOUT=200
-RTL_WAVES  = $(COP_HOME)/work/icarus/waves.vcd
-RTL_TRACE  =
+RTL_TIMEOUT ?=200
+RTL_WAVES   ?= $(COP_HOME)/work/icarus/waves.vcd
+RTL_TRACE    =
 
 SIM_UNIT_TEST ?= 
 
