Started detailing the example integration with the PicoRV32
- Add section to implementation document
- Add picorv32 repository as sub-module in `external/`
- Relates to #16

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   .gitmodules
	modified:   docs/implementation.tex
	new file:   docs/implementation/integration.tex
	modified:   docs/shared.sty
	new file:   external/picorv32

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/riscv-opcodes"]
 	path = external/riscv-opcodes
 	url = git@github.com:riscv/riscv-opcodes.git
+[submodule "external/picorv32"]
+	path = external/picorv32
+	url = https://github.com/cliffordwolf/picorv32.git
