Working integration testbench with COP and PicoRV32
- Can see PicoRV and COP working and communiating in wave forms.
- Documentation of everything TBD
- Flow for compiling example programs.
- Special make targets for XCrypto assembly files.
- Change interrupt/reset addresses of PicoRV to match linker script.
- Delete old example files.
- See #16

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   Makefile
	modified:   examples/Makefile
	deleted:    examples/aes-accelerated.S
	new file:   examples/common/boot.S
	new file:   examples/common/common.h
	new file:   examples/common/linker.ld
	deleted:    examples/cop-instructions.S
	new file:   examples/integration-test/Makefile
	new file:   examples/integration-test/copmv.x.S
	new file:   examples/integration-test/integration-test.c
	modified:   flow/icarus/Makefile
	modified:   rtl/integration/scarv_prv_xcrypt_top.v
	modified:   verif/tb/tb_integration.v

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,22 +1,21 @@
 
 
-AS      = $(COP_HOME)/work/riscv-binutils-gdb/build/gas/as-new
-OBJDUMP = $(COP_HOME)/work/riscv-binutils-gdb/build/binutils/objdump
+export CC       = $(RISCV)/bin/riscv64-unknown-elf-gcc
+export AS       = $(RISCV)/bin/riscv64-unknown-elf-as
+export LD       = $(RISCV)/bin/riscv64-unknown-elf-ld
+export X_AS     = $(COP_HOME)/work/riscv-binutils-gdb/build/gas/as-new
+export X_OBJDUMP= $(COP_HOME)/work/riscv-binutils-gdb/build/binutils/objdump
 
-ASFLAGS += -march=rv32imx -mabi=ilp32 -fpic
+export INC_DIR  = $(COP_HOME)/examples/common
 
-SRC     ?= cop-instructions.S
-OUT_OBJ := $(addprefix $(COP_WORK)/,$(SRC:%.S=%.o))
-OUT_DIS := $(addprefix $(COP_WORK)/,$(SRC:%.S=%.dis))
+export ASFLAGS  += -march=rv32ix -mabi=ilp32 
 
-all: $(OUT_OBJ) $(OUT_DIS)
+export CFLAGS   += -mabi=ilp32 -march=rv32i -O2 -Wall -I$(INC_DIR) \
+                  -nostartfiles -nostdlib
 
-${COP_WORK}/%.o : %.S
-	$(AS) $(ASFLAGS) $(INC_DIRS) -c -o $@ $^
+export LDSCRIPT ?= $(COP_HOME)/examples/common/linker.ld
 
-${COP_WORK}/%.dis : $(COP_WORK)/%.o
-	$(OBJDUMP) -j.text -dt $< > $@
+export LDFLAGS  += -T$(LDSCRIPT)
 
-.PHONY: clean
-clean:
-	echo $(OUT_OBJ) $(OUT_DIS)
+all:
+	$(MAKE) -C integration-test all
