--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -4,28 +4,23 @@ YS          ?= $(YS_INSTALL)yosys
 YSMTBMC     ?= $(YS_INSTALL)yosys-smtbmc
 YS_SCRIPT   ?= write-smt-tb.ys
 
-YS_SOLVER   ?= z3
-YS_VCD      ?= $(COP_HOME)/work/yosys.vcd
+SBY         ?= sby
+SBY_SCRIPT  ?= proofs.sby
+SBY_WORK    ?= $(COP_WORK)/sby
 
-SRC_RTL     ?= $(find $(COP_HOME) -path "rtl/coprocessor/*.v")
-SRC_VERIF   ?= $(find $(COP_HOME) -path "verif/*.v")
+SMT2_out    ?= $(COP_WORK)/smt2/formal.smt2
 
-SMT2_out    = $(COP_HOME)/work/yosys_tb.smt2
+SRC_RTL     ?= $(shell find ../../ -path "*rtl/*.v")
+SRC_VERIF   ?= $(shell find ../../ -path "*verif/*.v")
+
 VLOG_out    = $(COP_HOME)/work/scarv_cop_top.v
 
-SMT_STEPS   = 10
-SMT_SOLVER  = z3
-SMT_VCD     = $(COP_WORK)/smt.vcd
-
 LOG_SYNTH   = $(COP_HOME)/work/yosys-synth.log
-LOG_TB      = $(COP_HOME)/work/yosys-tb.log
+LOG_SMT2    = $(COP_HOME)/work/smt2/synthesis.log
 
-all: $(SMT2_out) $(VLOG_out)
+PREP_MODEL  = $(COP_WORK)/model_ise_prep.ilang
 
-smt2        : $(SMT2_out)
-$(SMT2_out) : YS_SCRIPT = write-smt-tb.ys
-$(SMT2_out) : $(YS_SCRIPT) $(SRC_RTL) $(SRC_VERIF)
-	$(YS) -QT -l $(LOG_TB) $(YS_SCRIPT)
+all: $(VLOG_out)
 
 synthesise: $(VLOG_out)
 $(VLOG_out) : YS_SCRIPT = write-verilog.ys
@@ -37,14 +32,23 @@ adder       : YS_SCRIPT = adder.ys
 adder       : ../../rtl/coprocessor/scarv_cop_palu_adder.v
 	$(YS) -QT $(YS_SCRIPT)
 
-formal-trace:
-	$(YSMTBMC) -t $(SMT_STEPS) \
-        -g \
-        --presat \
-        --dump-vcd $(SMT_VCD) \
-        -s $(SMT_SOLVER) \
-        $(SMT2_out)
+$(PREP_MODEL) : $(COP_HOME)/verif/model/model_ise.v
+	$(YS) -QT prep_ise_model.ys
+
+.PHONY: smt2
+smt2: $(SMT2_out)
+$(SMT2_out) : $(SRC_RTL) $(SRC_VERIF)
+	-mkdir -p $(dir $(SMT2_out))
+	$(YS) -QT -l $(LOG_SMT2) $(YS_SCRIPT)
+
+.PHONY: formal
+formal:
+	-rm -rf $(SBY_WORK)
+	sby -d $(SBY_WORK) \
+        --yosys $(YS) \
+        --smtbmc $(YSMTBMC) \
+        $(SBY_SCRIPT)
 
 clean:
-	rm -rf $(YS_VCD) $(SMT2_out) $(VLOG_out) $(SMT_VCD) $(LOG_SYNTH) \
-        $(COP_WORK)/*.log $(COP_WORK)/*.rpt $(LOG_TB)
+	rm -rf $(SMT2_out) $(VLOG_out) $(SMT_VCD) $(LOG_SYNTH) \
+        $(COP_WORK)/*.log $(COP_WORK)/*.rpt
