Started writing the formal testbench
- Decided not to use simulation model - too slow and inapproproate
  for formal work.
- Found bug where if input instruction is not kept stable we get
  the wrong results out.
  - Input instruction should have been registered.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   Makefile
	modified:   flow/yosys/Makefile
	modified:   flow/yosys/write-smt-tb.ys
	new file:   verif/formal/fml_checks_top.v
	new file:   verif/formal/fml_common.vh
	modified:   verif/tb/tb_formal.v

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -4,11 +4,14 @@ YS          ?= $(YS_INSTALL)yosys
 YSMTBMC     ?= $(YS_INSTALL)yosys-smtbmc
 YS_SCRIPT   ?= write-smt-tb.ys
 
+BMC_STEPS   ?= 10
+
 SBY         ?= sby
 SBY_SCRIPT  ?= proofs.sby
 SBY_WORK    ?= $(COP_WORK)/sby
 
 SMT2_out    ?= $(COP_WORK)/smt2/formal.smt2
+SMT2_TRACE  ?= $(COP_WORK)/smt2/trace.vcd
 
 SRC_RTL     ?= $(shell find ../../ -path "*rtl/*.v")
 SRC_VERIF   ?= $(shell find ../../ -path "*verif/*.v")
@@ -41,13 +44,21 @@ $(SMT2_out) : $(SRC_RTL) $(SRC_VERIF)
 	-mkdir -p $(dir $(SMT2_out))
 	$(YS) -QT -l $(LOG_SMT2) $(YS_SCRIPT)
 
+smt2-trace: $(SMT2_out)
+	$(YSMTBMC) -t $(BMC_STEPS) \
+               -g \
+               --presat \
+               --dump-vcd $(SMT2_TRACE) \
+               -s z3 \
+               $(SMT2_out)
+
 .PHONY: formal
-formal:
-	-rm -rf $(SBY_WORK)
-	sby -d $(SBY_WORK) \
-        --yosys $(YS) \
-        --smtbmc $(YSMTBMC) \
-        $(SBY_SCRIPT)
+formal: $(SMT2_out)
+	$(YSMTBMC) -t $(BMC_STEPS) \
+               --presat \
+               --dump-vcd $(SMT2_TRACE) \
+               -s z3 \
+               $(SMT2_out)
 
 clean:
 	rm -rf $(SMT2_out) $(VLOG_out) $(SMT_VCD) $(LOG_SYNTH) \
