Fix bug where isntruction and rs1 are were not registered.
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   Makefile
	modified:   flow/yosys/Makefile
	modified:   rtl/coprocessor/scarv_cop_top.v

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -12,6 +12,7 @@ SBY_WORK    ?= $(COP_WORK)/sby
 
 SMT2_out    ?= $(COP_WORK)/smt2/formal.smt2
 SMT2_TRACE  ?= $(COP_WORK)/smt2/trace.vcd
+SMT2_VTB    ?= $(COP_WORK)/smt2/vtb.v
 
 SRC_RTL     ?= $(shell find ../../ -path "*rtl/*.v")
 SRC_VERIF   ?= $(shell find ../../ -path "*verif/*.v")
@@ -57,6 +58,7 @@ formal: $(SMT2_out)
 	$(YSMTBMC) -t $(BMC_STEPS) \
                --presat \
                --dump-vcd $(SMT2_TRACE) \
+               --dump-vlogtb $(SMT2_VTB) \
                -s z3 \
                $(SMT2_out)
 
