Start and end times added to formal check files.
 On branch dev/ben-marshall
 Changes to be committed:
	modified:   flow/yosys/Makefile

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -67,13 +67,14 @@ smt2-trace: $(SMT2_out)
 
 $(SMTDIR)/%.rpt  : $(SMTDIR)/%.smt2
 	rm -f $@
+	echo "`date` Started $(notdir $(basename $@))" > $@
 	$(YSMTBMC) -t $(BMC_STEPS) \
                --presat \
                --dump-vcd $@.vcd \
                --noprogress \
                -s z3 \
                $<
-	echo "PASSED" > $@
+	echo "`date` PASSED $(notdir $(basename $@))" > $@
 
 .PHONY: formal
 formal: $(SMT2_out)
