Formal model for BOP.cr
- Record whole formal stdout
- See #27

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   flow/yosys/Makefile
	new file:   verif/formal/fml_chk_instr_bop_cr.v

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -69,12 +69,11 @@ $(SMTDIR)/%.rpt  : $(SMTDIR)/%.smt2
 	rm -f $@
 	echo "`date` Started $(notdir $(basename $@))" > $@
 	$(YSMTBMC) -t $(BMC_STEPS) \
-               --presat \
                --dump-vcd $@.vcd \
                --noprogress \
                -s z3 \
-               $<
-	echo "`date` PASSED $(notdir $(basename $@))" > $@
+               $< | tee -a $@
+	echo "`date` Finished $(notdir $(basename $@))" >> $@
 
 .PHONY: formal
 formal: $(SMT2_out)
