mv2cop -> gpr2xcr
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/proposal.txt
	modified:   docs/specification/appx-changelog.tex
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/bg-feature.tex
	modified:   docs/specification/spec-instr.tex
	modified:   examples/integration-test/copmv.x.S
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   flow/yosys/Makefile
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	modified:   verif/formal/fml_chk_instr_mv2cop.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/00-mvcop.S
	modified:   verif/unit/01-cmov.S
	modified:   verif/unit/02-li.S
	modified:   verif/unit/03-bop.S
	modified:   verif/unit/04-ins-ext.S
	modified:   verif/unit/08-load.S
	modified:   verif/unit/10-load-h.S
	modified:   verif/unit/11-load-b.S
	modified:   verif/unit/12-store-w.S
	modified:   verif/unit/13-store-h.S
	modified:   verif/unit/14-store-b.S
	modified:   verif/unit/15-gather-b.S
	modified:   verif/unit/16-scatter-b.S
	modified:   verif/unit/17-gather-h.S
	modified:   verif/unit/18-scatter-h.S
	modified:   verif/unit/19-random.S

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -26,7 +26,7 @@ CHECKS_DIR       = $(COP_HOME)/verif/formal
 FML_ENGINE      ?= boolector
 FML_CHECK_NAME  ?= correct_invalid_opcode_response \
                    correct_result_encodings \
-                   instr_mv2cop \
+                   instr_gpr2xcr \
                    instr_xcr2gpr
 
 FML_CHECK_SRC = $(addsuffix .v,$(addprefix $(CHECKS_DIR)/fml_chk_, $(FML_CHECK_NAME)))
