Split xc.pmul.1 formal check into 3 pieces
- One for PW >= 4, one for PW==1, one for PW == 2
- Run PW==1/2 for 20 and 36 cycles respectivley so we actually fit
  an instruction execution in.
- Add flow/yosys/proof-depths.mk for running specific proofs to
  specific depths.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   flow/yosys/Makefile
	new file:   flow/yosys/proof-depths.mk
	modified:   verif/formal/fml_chk_instr_pmul_l.v
	new file:   verif/formal/fml_chk_instr_pmul_l_pw1.v
	new file:   verif/formal/fml_chk_instr_pmul_l_pw2.v
	modified:   verif/tb/tb_formal.v

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -57,6 +57,7 @@ $(SMTDIR)/%.smt2 : $(COP_HOME)/verif/formal/fml_chk_%.v $(SRC_RTL) $(SRC_FORMAL)
         -p"script $(YS_SCRIPT)" \
         -p"write_smt2 -wires $@"
 
+include proof-depths.mk
 $(SMTDIR)/%.rpt  : $(SMTDIR)/%.smt2
 	rm -f $@
 	echo "`date` Started $(notdir $(basename $@))" > $@
