Rename COP_HOME, COP_WORK => XC_HOME, XC_WORK
- Renaming environment variables.
- See #44

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   Makefile
	modified:   README.md
	modified:   bin/setup-binutils.sh
	modified:   bin/source.me.sh
	modified:   docs/Makefile
	modified:   examples/Makefile
	modified:   examples/integration-test/Makefile
	modified:   flow/icarus/Makefile
	modified:   flow/icarus/integration.cmd
	modified:   flow/icarus/manifest.cmd
	modified:   flow/yosys/Makefile
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   verif/unit/Makefile

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,4 @@
-ETABLE  = $(COP_WORK)/crypto-ise.encodings.tex
+ETABLE  = $(XC_WORK)/crypto-ise.encodings.tex
 SOURCES = specification.tex implementation.tex
 TARGETS = $(patsubst %.tex, %.pdf, ${SOURCES})
 
@@ -18,7 +18,7 @@ ${TARGETS} : %.pdf : %.tex
 all      : ${TARGETS} $(ETABLE)
 
 $(ETABLE): ise-opcodes.txt
-	cat $< | $(COP_HOME)/bin/ise-parse-opcodes.py -tex > $@
+	cat $< | $(XC_HOME)/bin/ise-parse-opcodes.py -tex > $@
 
 diagrams: $(DIA_OUT)
 diagrams/%.eps : diagrams/%.dot
