Step 1 of #43 - Modularise all formal abstraction logic
- Moved abstraction logic and formal checks into their own
  self contained module, rather than being at the top level of
  the formal testbench.
- Makes the checks easier to re-use as part of a normal simulation
  flow.

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   flow/yosys/Makefile
	modified:   rtl/coprocessor/scarv_cop_cprs.v
	modified:   rtl/coprocessor/scarv_cop_top.v
	copied:     verif/tb/tb_formal.v -> verif/formal/fml_top.v
	modified:   verif/tb/tb_formal.v

--- a/flow/yosys/Makefile
+++ b/flow/yosys/Makefile
@@ -12,7 +12,8 @@ SRC_VERIF   ?= $(shell find ../../ -path "*verif/*.vh") \
 	           $(shell find ../../ -path "*verif/*.v") 
 SRC_FORMAL  ?= $(XC_HOME)/verif/tb/tb_formal.v \
                $(XC_HOME)/verif/formal/fml_pack_widths.vh \
-               $(XC_HOME)/verif/formal/fml_common.vh
+               $(XC_HOME)/verif/formal/fml_common.vh \
+               $(XC_HOME)/verif/formal/fml_top.v
 
 VLOG_out    = $(XC_HOME)/work/scarv_cop_top.v
 
