First working compile of verilated source
 On branch dev/verilator
 Changes to be committed:
	modified:   flow/verilator/Makefile
	new file:   flow/verilator/vl_main.cpp

--- a/flow/verilator/Makefile
+++ b/flow/verilator/Makefile
@@ -13,8 +13,11 @@ SRC_RTL     ?= $(shell find ../../ -path "*rtl/coprocessor/*.v") \
 
 
 INTEG_TB    ?= integ_tb
+SIM_EXE      = $(XC_HOME)/flow/verilator/obj_dir/$(INTEG_TB)
+TOP_MODULE  ?= scarv_prv_xcrypt_top
 
-VL_FLAGS    ?= -Wall -top-module scarv_prv_xcrypt_top \
+VL_FLAGS    ?= -Wall -top-module $(TOP_MODULE) \
+	            -Wno-style -Wno-fatal \
                 -I$(XC_HOME)/rtl/coprocessor \
                 -I$(XC_HOME)/work
 
@@ -24,4 +27,4 @@ build: $(INTEG_TB)
 
 $(INTEG_TB) : $(SRC_RTL)
 	$(VERILATOR) $(VL_FLAGS) --cc $(SRC_RTL) --exe vl_main.cpp -o $@
-
+	$(MAKE) -C obj_dir -f V$(TOP_MODULE).mk $(INTEG_TB)
