--- a/flow/verilator/Makefile
+++ b/flow/verilator/Makefile
@@ -10,13 +10,10 @@ SRC_RTL     ?= $(shell find ../../ -path "*rtl/coprocessor/*.v") \
                $(shell find ../../ -path "*rtl/integration/*.v") \
 	           $(shell find ../../ -path "*rtl/integration/*.vh") \
                $(XC_HOME)/external/picorv32/picorv32.v  \
-               $(XC_HOME)/verif/tb/axi_sram.v   \
-               $(XC_HOME)/verif/tb/tb_integration.v
 
 
-INTEG_TB    ?= tb_integration
-SIM_EXE      = $(XC_HOME)/flow/verilator/obj_dir/$(INTEG_TB)
-TOP_MODULE  ?= tb_integration
+TOP_MODULE  ?= scarv_prv_xcrypt_top
+SIM_EXE      = $(XC_HOME)/flow/verilator/obj_dir/$(TOP_MODULE)
 
 VL_FLAGS    ?= -Wall -top-module $(TOP_MODULE) \
 	            -Wno-style -Wno-fatal \
@@ -31,7 +28,7 @@ build: $(SIM_EXE)
 #
 # Construct the verilated executable.
 #
-$(SIM_EXE) : $(SRC_RTL)
+$(SIM_EXE) : $(SRC_RTL) vl_main.cpp
 	$(VERILATOR) $(VL_FLAGS) --cc $(SRC_RTL) --exe vl_main.cpp -o $@
 	$(MAKE) -C obj_dir -f V$(TOP_MODULE).mk
 
