integration-test example passing with verilator.
- Successful emulation of AXI bus
- Can detect pass/fail conditions.
- Added SREC input method for simulation memory images.

 On branch dev/verilator
 Changes to be committed:
	modified:   examples/Makefile
	modified:   examples/common/common.mk
	modified:   flow/verilator/Makefile
	new file:   flow/verilator/srec.cpp
	new file:   flow/verilator/srec.hpp
	modified:   flow/verilator/vl_main.cpp

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,6 +5,7 @@ export AS       = $(RISCV)/bin/riscv64-unknown-elf-as
 export LD       = $(RISCV)/bin/riscv64-unknown-elf-ld
 export X_AS     = $(XC_HOME)/work/riscv-binutils-gdb/build/gas/as-new
 export X_OBJDUMP= $(XC_HOME)/work/riscv-binutils-gdb/build/binutils/objdump
+export X_OBJCOPY= $(XC_HOME)/work/riscv-binutils-gdb/build/binutils/objcopy
 
 export INC_DIR  = $(XC_HOME)/examples/common
 
