Verilator testbench framework finished.
- Can specify wave file/srec file/ pass/fail/timeout all by
  the command line.
- Hello world example showing off the virtual UART

 On branch dev/verilator
 Changes to be committed:
	modified:   examples/common/boot.S
	modified:   examples/common/common.h
	modified:   examples/common/common.mk
	modified:   examples/helloworld/helloworld.c
	modified:   flow/verilator/Makefile
	modified:   flow/verilator/vl_main.cpp

--- a/flow/verilator/Makefile
+++ b/flow/verilator/Makefile
@@ -14,13 +14,20 @@ SRC_RTL     ?= $(shell find ../../ -path "*rtl/coprocessor/*.v") \
 CPP_FILES   = vl_main.cpp srec.cpp
 
 TOP_MODULE  ?= scarv_prv_xcrypt_top
-SIM_EXE      = $(XC_HOME)/flow/verilator/obj_dir/$(TOP_MODULE)
+SIM_EXE      = $(XC_HOME)/work/verilator/$(TOP_MODULE)
 
 VL_FLAGS    ?= -Wall -top-module $(TOP_MODULE) \
 	            -Wno-style -Wno-fatal \
+                --trace \
                 +define+NO_WAVE_DUMP=1+USE_VERILATOR_CLK_RESET=1 \
                 -I$(XC_HOME)/rtl/coprocessor \
                 -I$(XC_HOME)/work
+
+WAVES_FILE  ?= $(XC_HOME)/work/verilator/vl_waves.vcd
+
+VERILATOR_TIMEOUT   ?= 300000
+VERILATOR_PASS_ADDR ?= 0x00000001C
+VERILATOR_FAIL_ADDR ?= 0x000000010
 
 all: build
 
@@ -30,12 +37,18 @@ build: $(SIM_EXE)
 # Construct the verilated executable.
 #
 $(SIM_EXE) : $(SRC_RTL) $(CPP_FILES)
+	@mkdir -p $(dir $(SIM_EXE))
 	$(VERILATOR) $(VL_FLAGS) --cc $(SRC_RTL) --exe $(CPP_FILES) -o $@
 	$(MAKE) -C obj_dir -f V$(TOP_MODULE).mk
 
 #
 # Run the simulation executable
 #
+run: RTL_TIMEOUT=$(VERILATOR_TIMEOUT)
 run: $(SIM_EXE)
+	@mkdir -p $(dir $(WAVES_FILE))
 	$(SIM_EXE) +TIMEOUT=$(RTL_TIMEOUT) \
-                +IMEM=$(SIM_UNIT_TEST:%.hex=%.srec) 
+               +IMEM=$(SIM_UNIT_TEST:%.hex=%.srec) \
+               +WAVES=$(WAVES_FILE) \
+               +PASS_ADDR=$(VERILATOR_PASS_ADDR) \
+               +FAIL_ADDR=$(VERILATOR_FAIL_ADDR) 
