Change integration post-reset PC 0x00000000 -> 0xC0000000
 On branch dev/verilator
 Changes to be committed:
	modified:   examples/common/boot.S
	modified:   examples/common/linker.ld
	modified:   flow/verilator/Makefile
	modified:   rtl/integration/scarv_prv_xcrypt_top.v

--- a/flow/verilator/Makefile
+++ b/flow/verilator/Makefile
@@ -26,8 +26,8 @@ VL_FLAGS    ?= -Wall -top-module $(TOP_MODULE) \
 WAVES_FILE  ?= $(XC_HOME)/work/verilator/vl_waves.vcd
 
 VERILATOR_TIMEOUT   ?= 300000
-VERILATOR_PASS_ADDR ?= 0x00000001C
-VERILATOR_FAIL_ADDR ?= 0x000000010
+VERILATOR_PASS_ADDR ?= 0xC000001C
+VERILATOR_FAIL_ADDR ?= 0xC0000010
 
 all: build
 
