Example verilator flow complete
- Add libscarv as submodule
- Show in examples/helloworld how to include functionality
  from libscarv
- Implement XCrypto version of mpn_add function from libscarv
  and use in examples/helloworld.

 On branch dev/verilator
 Changes to be committed:
	modified:   .gitmodules
	modified:   Makefile
	modified:   README.md
	modified:   examples/Makefile
	modified:   examples/common/boot.S
	modified:   examples/common/common.h
	modified:   examples/helloworld/Makefile
	modified:   examples/helloworld/helloworld.c
	new file:   external/libscarv
	modified:   flow/verilator/vl_main.cpp

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/picorv32"]
 	path = external/picorv32
 	url = https://github.com/cliffordwolf/picorv32.git
+[submodule "external/libscarv"]
+	path = external/libscarv
+	url = git@github.com:scarv/sw-libscarv.git
