--- a/examples/helloworld/Makefile
+++ b/examples/helloworld/Makefile
@@ -2,6 +2,8 @@
 
 TEST_NAME=helloworld
 OBJECTS  = $(TGT_DIR)/$(TEST_NAME).o \
-           $(TGT_DIR)/boot.o
+           $(TGT_DIR)/boot.o \
+           $(LIBSCARV)/lib/mpn_add.o \
+           $(LIBSCARV)/lib/mpn_add_xc.o
 
 include ../common/common.mk
